# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling-build"

[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "parkit"
dynamic = ['version','readme']
description = "Parkit"
authors = [
    { name="kopardev", email="vishal.koparde@nih.gov" },
]
license = {file = "LICENSE.md"}
requires-python = ">=3.11"
# keywords = []
# classifiers = [
#     "Programming Language :: Python :: 3",
#     "License :: OSI Approved :: MIT License",
#     "Operating System :: OS Independent",
# ]
dependencies = ["pandas"]

[project.optional-dependencies]
dev = [
    "black >= 22.0.0",
    "pre-commit"
]
test = [
    "pytest"
]

# [project.urls]
# Homepage = "https://github.com/pypa/sampleproject"
# Issues = "https://github.com/pypa/sampleproject/issues"

[project.scripts]
parkit = "parkit.__main__:main"
parkit_folder2hpcdme = "parkit.parkit_folder2hpcdme:main"
parkit_tarball2hpcdme = "parkit.parkit_tarball2hpcdme:main"
update_collection_metadata = "parkit.update_collection_metadata:main"

[tool.setuptools.dynamic]
version = {file = "src/parkit/src/VERSION"}
readme = {file = "README.md"}
